--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Singing with my Friends</h1>
+    <button id="singBtn">Sing!</button>
     <script src="/app.js"></script>
 </body>
 </html>
